--- a/app/styles/2-base/_global.scss
+++ b/app/styles/2-base/_global.scss
@@ -1,10 +1,19 @@
 * {
     box-sizing: border-box;
+    &:focus {
+        outline: none;
+    }
 }
 
-p {
-    font-size: 14px;
-    line-height: 18px;
+html,
+body {
+    outline: 0;
+}
+
+body {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 a {
