add css responsive grid

--- a/app/styles/0-helpers/_variables.scss
+++ b/app/styles/0-helpers/_variables.scss
@@ -13,6 +13,7 @@ $container-width: 1200px;
 $mg-sm: 12px;
 $mg-lg: 24px;
 
+$grid-main--gap: 12px;
 
 // Breakpoints
 // ***************************************
