--- a/app/styles/3-layout/wrapper.scss
+++ b/app/styles/3-layout/wrapper.scss
@@ -1,6 +1,9 @@
+// Wrapper settings
+// ***************************************
+
 .wrapper {
   max-width: $wrapper-width;
   position: relative;
   margin: 0 auto;
-  border: 1px solid red;
+  //border: 1px solid red;
 }
