add fixed header and footer

--- a/app/styles/3-layout/wrapper.scss
+++ b/app/styles/3-layout/wrapper.scss
@@ -3,6 +3,7 @@
 
 .wrapper {
   max-width: $wrapper-width;
+  padding-top: $header-height;
   position: relative;
   margin: 0 auto;
   //border: 1px solid red;
