--- a/app/styles/4-modules/_buttons.scss
+++ b/app/styles/4-modules/_buttons.scss
@@ -1,9 +1,3 @@
-$font-size: 14px;
-$c-prim: orange;
-$c-white: #f8f8f8;
-$c-disabled: #7e7e7e;
-$btn-border-radius: 4px;
-
 // Button reset
 // ***************************************
 
@@ -50,21 +44,21 @@ button {
     display: inline-block;
     text-transform: uppercase;
     padding: 4px 12px;
-    color: $c-prim;
+    color: $c-sec;
     border-radius: $btn-border-radius;
 
     &:hover {
-      color: darken($c-prim, 15%);
+      color: darken($c-sec, 15%);
       background-color: lighten($c-prim, 40%);
     }
 
     &:focus {
-      color: darken($c-prim, 15%);
+      color: darken($c-sec, 15%);
       background-color: lighten($c-prim, 40%);
     }
 
     &:active {
-      color: darken($c-prim, 20%);
+      color: darken($c-sec, 20%);
       background-color: lighten($c-prim, 30%);
     }
 
@@ -94,45 +88,45 @@ button {
 // ***************************************
 
 .btn-prim {
-  background-color: $c-prim;
-  border-color: $c-prim;
+  background-color: $c-sec;
+  border-color: $c-sec;
   color: $c-white;
 
   &:hover {
-    border-color: darken($c-prim, 10%);
-    background-color: darken($c-prim, 10%);
+    border-color: darken($c-sec, 10%);
+    background-color: darken($c-sec, 10%);
   }
 
   &:focus {
-    border-color: darken($c-prim, 10%);
-    background-color: darken($c-prim, 10%);
+    border-color: darken($c-sec, 10%);
+    background-color: darken($c-sec, 10%);
   }
 
   &:active {
-    border-color: darken($c-prim, 20%);
-    background-color: darken($c-prim, 20%);
+    border-color: darken($c-sec, 20%);
+    background-color: darken($c-sec, 20%);
   }
 }
 
 .btn-sec {
-  color: $c-prim;
-  border-color: $c-prim;
+  color: $c-sec;
+  border-color: $c-sec;
 
   &:hover {
-    background-color: $c-prim;
-    border-color: $c-prim;
+    background-color: $c-sec;
+    border-color: $c-sec;
     color: $c-white;
   }
 
   &:focus {
-    background-color: $c-prim;
-    border-color: $c-prim;
+    background-color: $c-sec;
+    border-color: $c-sec;
     color: $c-white;
   }
 
   &:active {
-    border-color: darken($c-prim, 20%);
-    background-color: darken($c-prim, 20%);
+    border-color: darken($c-sec, 20%);
+    background-color: darken($c-sec, 20%);
   }
 }
 
