--- a/app/styles/2-base/_global.scss
+++ b/app/styles/2-base/_global.scss
@@ -13,7 +13,7 @@ body {
 body {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     font-family: $font-body;
     background-color: $c-background;
     font-size: $font-size;
