--- a/app/styles/4-modules/_header.scss
+++ b/app/styles/4-modules/_header.scss
@@ -1,7 +1,7 @@
-
 .header {
   height: $header-height;
-
+  background-color: $c-prim;
+  color: $c-white;
   position: fixed;
   top: 0;
   left: 0;
