--- a/app/styles/3-layout/_grid.scss
+++ b/app/styles/3-layout/_grid.scss
@@ -24,6 +24,72 @@
   }
 }
 
+// vertical spacing
+// ***************************************
+
+.margin-top-xs {
+  margin-top: 16px;
+}
+
+.margin-top-s {
+  margin-top: 24px;
+}
+
+.margin-top-m {
+  margin-top: 40px;
+}
+
+.margin-top-l {
+  margin-top: 72px;
+}
+
+.margin-top-xl {
+  margin-top: 112px;
+}
+
+
+
+.gutter-top-xs {
+  padding-top: 16px;
+}
+
+.gutter-top-s {
+  padding-top: 24px;
+}
+
+.gutter-top-m {
+  padding-top: 40px;
+}
+
+.gutter-top-l {
+  padding-top: 72px;
+}
+
+.gutter-top-xl {
+  padding-top: 112px;
+}
+
+
+.gutter-bot-xs {
+  padding-bottom: 16px;
+}
+
+.gutter-bot-s {
+  padding-bottom: 24px;
+}
+
+.gutter-bot-m {
+  padding-bottom: 40px;
+}
+
+.gutter-bot-l {
+  padding-bottom: 72px;
+}
+
+.gutter-bot-xl {
+  padding-bottom: 112px;
+}
+
 // Grids
 // ***************************************
 
@@ -39,10 +105,6 @@
 
   @media (min-width: $bkp-medium) {
     grid-template-columns: repeat(12, 1fr);
-  }
-
-  & > * {
-    border: 1px solid red;
   }
 }
 
