style base form elements v1.0

--- a/app/styles/0-helpers/_variables.scss
+++ b/app/styles/0-helpers/_variables.scss
@@ -3,14 +3,14 @@
 
 $c-background: #F8F6EC;
 
-$c-prim: #50413C;
-$c-sec: #F5834D; // main cta color
-$c-terc: #FFCC63;
-$c-quat: #F8F6EC;
-$c-quin: #779E66; // secondary accent cta color
+$c-prim: #274E55;
+$c-sec: #C76345; // main cta color
+$c-terc: #F5DA9C;
+$c-quat: #F6F4EA;
+$c-quin: #765D84; // secondary accent cta color
 
 $c-black: #221716; // body font color
-$c-white: #F8F6EC; // contrast white color
+$c-white: #F6F4EA; // contrast white color
 
 $c-disabled: #7e7e7e;
 
@@ -31,10 +31,10 @@ $header-height: 72px;
 
 $font-size: 14px;
 
-// Button settings
+// Buttons and forms settings
 // ***************************************
 
-$btn-border-radius: 4px;
+$border-radius: 4px;
 
 // Breakpoints
 // ***************************************
