--- a/app/styles/4-modules/_buttons.scss
+++ b/app/styles/4-modules/_buttons.scss
@@ -18,6 +18,7 @@ button {
   font-size: $font-size;
   line-height: 1.3;
   transition: all .3s ease;
+  font-weight: 500;
 
   &.btn-block {
     display: block;
@@ -45,7 +46,7 @@ button {
     text-transform: uppercase;
     padding: 4px 12px;
     color: $c-sec;
-    border-radius: $btn-border-radius;
+    border-radius: $border-radius;
 
     &:hover {
       color: darken($c-sec, 15%);
@@ -74,8 +75,8 @@ button {
 
 .btn-block,
 .btn-inline {
-  border: 1px solid;
-  border-radius: $btn-border-radius;
+  border: 2px solid;
+  border-radius: $border-radius;
 
   &:disabled {
     color: $c-disabled;
