add error state to input fields

--- a/app/styles/4-modules/_forms.scss
+++ b/app/styles/4-modules/_forms.scss
@@ -129,6 +129,11 @@
       border-color: currentColor;
     }
   }
+
+  &.error {
+    border-color: $c-error;
+    background-color: lighten($c-error, 46%);
+  }
 }
 
 .helper-item {
