update functionality for popups v1.0

--- a/app/styles/0-helpers/_variables.scss
+++ b/app/styles/0-helpers/_variables.scss
@@ -35,6 +35,11 @@ $header-height: 72px;
 
 $font-size: 14px;
 
+// Popup animation speed
+// ***************************************
+
+$popup-anim-speed-in-s: .75s;
+
 // Buttons and forms settings
 // ***************************************
 
