adjust headers and add titles to dashboard pages

--- a/app/styles/4-modules/_header.scss
+++ b/app/styles/4-modules/_header.scss
@@ -1,5 +1,6 @@
 .header {
-  height: $header-height;
+  padding: 24px 16px;
+  line-height: 40px;
   background-color: $c-prim;
   color: $c-white;
   position: fixed;
