add header dropdown and hiding functionality

--- a/app/styles/2-base/_global.scss
+++ b/app/styles/2-base/_global.scss
@@ -8,6 +8,12 @@
 html,
 body {
     outline: 0;
+    overflow: inherit;
+    
+    @media (max-width: $bkp-small) {
+        overflow: hidden;
+        overflow-y: scroll;
+    }
 }
 
 body {
