create carousel functionality

--- a/app/styles/4-modules/_4-modules.scss
+++ b/app/styles/4-modules/_4-modules.scss
@@ -4,6 +4,7 @@
 @import "hero";
 @import "buttons";
 @import "icons";
+@import "carousel";
 @import "modals";
 @import "popups";
 @import "underlines";
