--- a/app/styles/4-modules/_forms.scss
+++ b/app/styles/4-modules/_forms.scss
@@ -84,7 +84,7 @@
 
 .label {
   font-size: 12px;
-  font-weight: 500;
+  font-family: $font-heading-sec;
   line-height: 16px;
   text-transform: capitalize;
   margin-bottom: 4px;
@@ -107,6 +107,7 @@
 
 .input,
 .textarea {
+  font-family: $font-heading-sec;
   border: 2px solid lighten($c-prim, 20%);
   background-color: lighten($c-prim, 68%);
   padding: 6px 10px;
@@ -115,7 +116,6 @@
   &::placeholder {
     transition: all .3s ease;
     color: $c-black;
-    font-weight: 500;
     opacity: .55;
   }
 
