--- a/app/styles/4-modules/_buttons.scss
+++ b/app/styles/4-modules/_buttons.scss
@@ -6,7 +6,7 @@ button {
   border: none;
   padding: 0;
   font-size: 100%;
-  font-family: inherit;
+  font-family: $font-heading-sec;
 }
 
 // Button base
@@ -18,7 +18,6 @@ button {
   font-size: $font-size;
   line-height: 1.3;
   transition: all .3s ease;
-  font-weight: 500;
 
   &.btn-block {
     display: block;
