--- a/app/styles/4-modules/_footer.scss
+++ b/app/styles/4-modules/_footer.scss
@@ -13,4 +13,18 @@
   h5 {
     font-size: 25px;
   }
+
+  .subnav-link:not(:first-of-type) {
+    padding: 4px 0;
+  }
+  .subnav-link:first-of-type {
+    padding-bottom: 4px;
+  }
+
+  .contact-item:not(:first-of-type) {
+    padding: 4px 0;
+  }
+  .contact-item:first-of-type {
+    padding-bottom: 4px;
+  }
 }
