--- a/app/styles/0-helpers/_variables.scss
+++ b/app/styles/0-helpers/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 // ***************************************
 
-$c-background: #F8F6EC;
+$c-background: #fff;
 
 $c-prim: #274E55;
 $c-sec: #C76345; // main cta color
@@ -17,6 +17,11 @@ $c-disabled: #7e7e7e;
 $c-error: #d81b60;
 $c-success: #43a047;
 $c-warning: #fdd835;
+
+
+$box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+
+$box-shadow-l: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 
 
 
