--- a/app/styles/2-base/_typography.scss
+++ b/app/styles/2-base/_typography.scss
@@ -10,6 +10,7 @@ h4,
 h5,
 h6 {
   font-family: $font-heading-main;
+  color: $c-font-grey-darkest;
   line-height: calc(1em + 4px);
   margin-bottom: calc(1em - 8px);
 }
@@ -76,6 +77,7 @@ h6 {
 
 // item headings
 .item-headline {
+  color: $c-font-grey-dark;
   font-size: 33px;
 
   @media (min-width: $bkp-small) {
@@ -92,6 +94,7 @@ h6 {
 }
 
 .item-subheadline {
+  color: $c-font-grey-dark;
   font-size: 25px;
 
   @media (min-width: $bkp-small) {
@@ -108,6 +111,7 @@ h6 {
 }
 
 p {
+  color: $c-font-grey;
   line-height: calc(1em + 4px);
   margin-bottom: 1em;
 
