add and link up static page images

--- a/app/styles/4-modules/_carousel.scss
+++ b/app/styles/4-modules/_carousel.scss
@@ -55,3 +55,17 @@
 }
 
 // slider styles
+
+.slide__profile {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 24px;
+
+  @media (min-width: $bkp-small) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  & .item-subheadline {
+    color: $c-prim;
+  }
+}
