--- a/app/styles/2-base/_global.scss
+++ b/app/styles/2-base/_global.scss
@@ -31,3 +31,12 @@ a {
 .hidden {
     display: none !important;
 }
+
+.img {
+    position: relative;
+
+    & > img {
+        width: 100%;
+        height: auto;
+    }
+}
