--- a/app/styles/4-modules/_hero.scss
+++ b/app/styles/4-modules/_hero.scss
@@ -46,5 +46,8 @@
     background-image: url("./../images/about_header_bg.png");
   }
 
+  &.blog {
+    background-image: url("./../images/blog-hero.JPG");
+  }
 
 }
