fix header logo and add smooth scroll to contact section

--- a/app/styles/4-modules/_header.scss
+++ b/app/styles/4-modules/_header.scss
@@ -13,8 +13,20 @@
   -webkit-transition: top .5s;
 }
 
+.header-logo_container {
+  position: relative;
+}
+
 .logo {
-  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 72px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dropdown {
