fix header and footer links

--- a/app/styles/4-modules/_footer.scss
+++ b/app/styles/4-modules/_footer.scss
@@ -33,3 +33,31 @@
     padding-bottom: 4px;
   }
 }
+
+.contact-item {
+  i,
+  span {
+    line-height: 24px;
+  }
+
+  span {
+    display: inline-block;
+    margin-left: 8px;
+  }
+
+  i {
+    font-size: 18px;
+  }
+
+  .fa-globe-europe {
+    color: $c-error;
+  }
+
+  .fa-phone-square {
+    color: $c-success;
+  }
+
+  .fa-envelope-square {
+    color: $c-sec;
+  }
+}
