--- a/app/styles/4-modules/_buttons.scss
+++ b/app/styles/4-modules/_buttons.scss
@@ -18,6 +18,7 @@ button {
   font-size: $font-size;
   line-height: 1.3;
   transition: all .3s ease;
+  text-align: center;
 
   &.btn-block {
     display: block;
