--- a/app/styles/4-modules/_carousel.scss
+++ b/app/styles/4-modules/_carousel.scss
@@ -1,6 +1,13 @@
 .carousel-container {
   position: relative;
-  padding: 0 10%;
+
+  @media (min-width: $bkp-small) {
+    padding: 0 36px;
+  }
+
+  @media (min-width: $bkp-medium) {
+    padding: 0 10%;
+  }
 }
 
 .carousel-slider {
