--- a/app/styles/4-modules/_items.scss
+++ b/app/styles/4-modules/_items.scss
@@ -56,7 +56,7 @@
 // **********************************************
 
 .card-main {
-  padding: 112px;
+  padding: 36px 12px;
   border-radius: $border-radius * 2;
   background-color: lighten($c-white, 8%);
   box-shadow: $box-shadow-l;
@@ -69,6 +69,14 @@
   .subtitle {
     color: $c-black;
     font-size: 18px;
+  }
+
+  @media (min-width: $bkp-small) {
+    padding: 72px;
+  }
+
+  @media (min-width: $bkp-medium) {
+    padding: 112px;
   }
 }
 
@@ -84,21 +92,69 @@
   position: relative;
   border-radius: $border-radius;
   overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
+  display: grid;
+  grid-template-columns: 1fr;
 
   .accomp-item {
-    flex: 1;
 
     &:first-child {
-      border-bottom-left-radius: $border-radius;
       border-top-left-radius: $border-radius;
+      border-top-right-radius: $border-radius;
     }
 
     &:last-child {
+      border-bottom-left-radius: $border-radius;
       border-bottom-right-radius: $border-radius;
-      border-top-right-radius: $border-radius;
+    }
+  }
+
+  @media (min-width: $bkp-small) {
+    grid-template-columns: 1fr 1fr;
+
+    .accomp-item {
+      &:first-child {
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: 0;
+      }
+
+      &:nth-child(2) {
+        border-top-right-radius: $border-radius;
+      }
+
+      &:nth-child(3) {
+        border-bottom-left-radius: $border-radius;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: $border-radius;
+      }
+    }
+  }
+
+  @media (min-width: $bkp-medium) {
+    grid-template-columns: repeat(4, 1fr);
+
+    .accomp-item {
+      &:first-child {
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: $border-radius;
+      }
+
+      &:nth-child(2) {
+        border-top-right-radius: 0;
+      }
+
+      &:nth-child(3) {
+        border-bottom-left-radius: 0;
+      }
+
+      &:last-child {
+        border-top-right-radius: $border-radius;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: $border-radius;
+      }
     }
   }
 }
