--- a/app/styles/4-modules/_items.scss
+++ b/app/styles/4-modules/_items.scss
@@ -175,7 +175,7 @@
   }
 }
 
-//sponsors
+// sponsors
 // **********************************************
 
 .sponsor {
@@ -200,4 +200,47 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+// Blog posts
+// **********************************************
+
+.article-blog {
+  overflow: hidden;
+  height: 100%;
+  border-radius: $border-radius;
+  background-color: $c-white;
+  box-shadow: $box-shadow-l;
+
+  display: flex;
+  flex-direction: column;
+
+  & > div {
+    flex-basis: 0;
+    flex-grow: 1;
+  }
+
+  .article-img {
+    display: block;
+    cursor: pointer;
+  }
+
+  .article-body {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .article__date {
+    color: $c-prim;
+  }
+
+  .article__headline {
+    font-size: 24px;
+  }
+
+  .btn {
+    font-family: $font-heading-sec;
+  }
 }
