--- a/app/styles/4-modules/_buttons.scss
+++ b/app/styles/4-modules/_buttons.scss
@@ -132,5 +132,33 @@ button {
   }
 }
 
-// Text link
+// Collapsible button
 // ***************************************
+
+.collap__content {
+  position: absolute;
+  left: -2px;
+  right: -2px;
+  top: calc(100% - 1px);
+  border-bottom-left-radius: $border-radius;
+  border-bottom-right-radius: $border-radius;
+
+  max-height: 0;
+  background-color: $c-sec;
+  overflow: hidden;
+  transition: max-height .3s ease;
+
+  .collap__link {
+    display: block;
+    padding: 8px 12px;
+    transition: background-color .3s ease;
+
+    &:hover {
+      background-color: darken($c-sec, 10%);
+    }
+
+    &:first-of-type {
+      border-top: 1px solid $c-white;
+    }
+  }
+}
