add mobile menu

--- a/app/styles/2-base/_global.scss
+++ b/app/styles/2-base/_global.scss
@@ -21,6 +21,10 @@ body {
     width: 100%;
     height: 100vh;
     background-color: $c-background;
+
+    &.stop_scroll {
+        overflow: hidden !important;
+    }
 }
 
 a {
