--- a/app/styles/3-layout/_sections.scss
+++ b/app/styles/3-layout/_sections.scss
@@ -41,3 +41,10 @@
 .section-blog {
   background-color: $c-quat;
 }
+
+.section#get-involved {
+  background-image: url("./../images/hero.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
