add open graphs and fix header logo bug

--- a/app/styles/4-modules/_header.scss
+++ b/app/styles/4-modules/_header.scss
@@ -13,6 +13,10 @@
   -webkit-transition: top .5s;
 }
 
+.header-logo_container {
+  position: relative;
+}
+
 .logo {
   position: absolute;
   left: 0;
