--- a/app/styles/4-modules/_hero.scss
+++ b/app/styles/4-modules/_hero.scss
@@ -62,4 +62,8 @@
     background-image: url("./../images/blog-hero.JPG");
   }
 
+  &.volunteers {
+    background-image: url("./../images/about_header_bg.png");
+  }
+
 }
